<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_bottom_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_top_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="justbe.mindfulness.LoginActivity"
        tools:showIn="@layout/activity_login">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/lotus_3x"
            android:gravity="center_horizontal"
            android:textSize="25sp">
        </TextView>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginUsernameRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="10dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/username_text"
                android:imeOptions="flagNoExtractUi"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginPasswordRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="4dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/editUsername"
                android:layout_alignRight="@+id/editUsername"
                android:layout_below="@+id/editUsername"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/password_text"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="loginPressed"
            android:text="@string/login_button" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="bottom|center_horizontal"
            android:text="@string/not_a_member"
            android:textColor="#FFFFFF"
            android:textSize="16sp">
        </TextView>

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:onClick="createAccountPressed"
            android:text="@string/create_account_button" />
    </LinearLayout>
</ScrollView>