<resources>
    <string name="app_name">Mindfulness</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_login">Login</string>
    <string name="login_button">Login</string>
    <string name="pleaseLogin">Please Login back</string>
    <string name="create_account_button">Sign up</string>
    <string name="next_button">Next</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="title_activity_sleep_time">Sleep Timings</string>
    <string name="title_activity_lesson_time">Lesson Timings</string>
    <string name="title_activity_meditation_time">Meditation Timings</string>
...
